<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) [2023] [Jim-shop]
  ~ [AircraftwarAndroid] is licensed under Mulan PubL v2.
  ~ You can use this software according to the terms and conditions of the Mulan PubL v2.
  ~ You may obtain a copy of Mulan PubL v2 at:
  ~          http://license.coscl.org.cn/MulanPubL-2.0
  ~ THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
  ~ EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
  ~ MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
  ~ See the Mulan PubL v2 for more details.
  -->

<resources>
    <string name="app_name">飞机大战</string>
    <string name="app_description">你深的 OOP 实践作业。</string>
    <string name="app_about" translatable="false">@string/app_description</string>
    <string name="main_label" translatable="false">@string/app_name</string>
    <string name="game_label">游戏界面</string>
    <string name="game_canvas_text_score">得分：%d</string>
    <string name="game_canvas_text_other_info">对方得分：%d 对方生命：%d</string>
    <string name="game_canvas_text_other_offline">对方已下线</string>
    <string name="dialog_save_score_title">新的游戏记录！</string>
    <string name="dialog_save_score_content">你的名字</string>
    <string name="scoreboard_label">排行榜</string>
    <string name="manage_space_label">管理空间</string>
    <string name="button_easy">简单模式</string>
    <string name="button_medium">普通模式</string>
    <string name="button_hard">困难模式</string>
    <string name="checkbox_sound">音效</string>
    <string name="item_about">关于</string>
    <string name="item_about_long">关于本应用</string>
    <string name="main_subtitle">难度选择</string>
    <string name="shortcut_scoreboard_short_label" translatable="false">@string/scoreboard_label</string>
    <string name="shortcut_scoreboard_long_label" translatable="false">@string/scoreboard_label</string>
    <string name="shortcut_scoreboard_disabled_message">暂时无法打开排行榜</string>
    <string name="item_delete">删除</string>
    <string name="item_delete_long">删除所选项</string>
    <string name="button_clear">清理游戏记录</string>
    <string name="button_clear_ok">清理完成</string>
    <string name="dialog_login_input_account">账号</string>
    <string name="dialog_login_input_password">密码</string>
    <string name="main_account">账号</string>
    <string name="dialog_login_title">登录</string>
    <string name="dialog_login_button_register">注册</string>
    <string name="account_label">用户信息</string>
    <string name="navback">返回</string>
    <string name="button_offline">单机游戏</string>
    <string name="button_online">在线对战</string>
    <string name="dialog_login_input_account_error">账号可能有误</string>
    <string name="dialog_login_input_password_error">密码可能有误</string>
    <string name="button_logout">登出</string>
    <string name="avatar">头像</string>
    <string name="pairing_label">匹配对手</string>
    <string name="button_pairing">请求匹配</string>
    <string name="button_pairing_sent">请求已发送</string>
    <plurals name="scoreboard_action_title">
        <item quantity="other">已选中 %d 项</item>
    </plurals>
</resources>