<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/am_abl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/am_tb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:menu="@menu/main"
            app:subtitle="@string/main_subtitle"
            app:subtitleCentered="true"
            app:navigationContentDescription="@string/main_account"
            app:navigationIcon="@drawable/ic_account_circle_24"
            app:title="@string/main_label"
            app:titleCentered="true" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/am_ll_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/am_btn_easy"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/button_easy"
                app:icon="@drawable/ic_brightness_low_24" />

            <Button
                android:id="@+id/am_btn_medium"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/button_medium"
                app:icon="@drawable/ic_brightness_medium_24" />

            <Button
                android:id="@+id/am_btn_hard"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/button_hard"
                app:icon="@drawable/ic_brightness_high_24" />
        </LinearLayout>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/am_sw_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/checkbox_sound"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/am_ll_buttons"
            app:thumbIcon="@drawable/ic_music_note_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>