<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) [2023] [Jim-shop]
  ~ [AircraftwarAndroid] is licensed under Mulan PubL v2.
  ~ You can use this software according to the terms and conditions of the Mulan PubL v2.
  ~ You may obtain a copy of Mulan PubL v2 at:
  ~          http://license.coscl.org.cn/MulanPubL-2.0
  ~ THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
  ~ EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
  ~ MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
  ~ See the Mulan PubL v2 for more details.
  -->

<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_scoreboard"
        android:shortcutDisabledMessage="@string/shortcut_scoreboard_disabled_message"
        android:shortcutId="scoreboard"
        android:shortcutLongLabel="@string/shortcut_scoreboard_long_label"
        android:shortcutShortLabel="@string/shortcut_scoreboard_short_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="net.imshit.aircraftwar.gui.ScoreboardActivity"
            android:targetPackage="net.imshit.aircraftwar" />
        <categories android:name="android.shortcut.conversation" />
        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE" />
    </shortcut>
</shortcuts>